kubernetes/home/matrix/dendrite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dendrite-matrix
  namespace: matrix
spec:
  selector:
    app: dendrite-matrix
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
      nodePort: 8008
    - name: https
      protocol: TCP
      port: 8448
      targetPort: 8448
      nodePort: 8448
